# gas-security-system

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv
components/espressif__esp_modem/examples/modem_tcp_client/main/: CMakeLists.txt
components/espressif__esp_modem/port/linux/esp_netif_linux/: CMakeLists.txt
docs/: hardware_images.md
main/: CMakeLists.txt  helpers.c  main.c  main.h  settings.c
main/libs/inc/: ads111x.h  gpio.h
main/libs/src/: ads111x.c  gpio.c
main/webpage/: app.css  app.js  index.html
